<resources>
    <string name="app_name">DailyTools</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text_tips">Tips 00:00:00.000</string>
    <string name="text_start_time">Input start time</string>
    <string name="text_end_time">Input end time</string>
    <string name="text_difference_time">Show difference</string>
    <string name="btn_calculation">Calculation</string>
    <string name="ta_empty">Please input date time!</string>
</resources>
