<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="65dp">

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:hint="@string/text_tips"
                android:layout_marginBottom="25dp"/>

            <EditText
                android:id="@+id/et_start_time"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:hint="@string/text_start_time" />

            <EditText
                android:id="@+id/et_end_time"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:hint="@string/text_end_time" />

            <EditText
                android:id="@+id/etT_difference_time"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:hint="@string/text_difference_time" />

            <Button
                android:id="@+id/btn_calculation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_calculation"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:layout_marginTop="15dp"
                android:text="@string/btn_calculation"/>
        </LinearLayout>

    </ScrollView>
</RelativeLayout>
